2006-12-25  Vlad Seryakov  <seryakov@users.sf.net>

        * nsd/nsconf.c:
        * nsd/tcljob.c:
        * nsd/nsd.h: Made jobperthread also config parameter for easy system-wide
        configuration. Added -timeout parameter to ns_job configure and config
        parameter jobtimeout to control how long job thread can wait for new job

2006-12-24  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/adpcmds.c:
	* nsd/adpeval.c:
	* nsd/adpparse.c:
	* nsd/adprequest.c:
        * nsd/tclcmds.c:
        * nsd/server.c:
	* nsd/nsd.h: Changed singlescript behaviour, made it in one pass
        without copying the whole page using temporary buffer. Added new
        ns_adp_info command that can be usefull in the templating engines
        based on ADP.

2006-12-23  Vlad Seryakov  <seryakov@users.sf.net>

	* include/ns.h:
	* include/nsthread.h:
	* nsd/adpcmds.c:
	* nsd/adpeval.c:
	* nsd/adpparse.c:
	* nsd/adprequest.c:
	* nsd/nsconf.c:
	* nsd/nsd.h:
	* nsd/server.c: Updated ADP engine to support .tcl files instead of
	Tcl based handler. ADP engine will perform caching and compiling Tcl
	files into Tcl procs and automatic expiration if needed.
	New parameter enabletclpages in the ns/server/server1/adp section now can
	be used to turn this option on, the old Tcl-only handler is still in the
	file.tcl. Speed benchmarks show pretty significate speed boost using
	ADP engine for .tcl files along with less memory consumption.

2006-12-23  Vlad Seryakov  <seryakov@users.sf.net>

	* doc/src/ns_adp_registertag.man
	* doc/src/ns_adp.man:
	* doc/src/ns_adp_ctl.man:
	* include/ns.h:
	* include/nsthread.h:
	* nsd/adpcmds.c:
	* nsd/adpeval.c:
	* nsd/adpparse.c:
	* nsd/adprequest.c:
	* nsd/init.c:
	* nsd/nsconf.c:
	* nsd/nsd.h:
	* nsd/return.c:
	* nsd/server.c:
	* nsd/tclcmds.c:
	* nsd/tclinit.c:
	* nsd/tclrequest.c: Ported ADP engine from AOLserver 4.5 with minor
	modifications. This port brings much better performance to ADP pages and